--- a/app/views/layout.pug
+++ b/app/views/layout.pug
@@ -3,5 +3,10 @@ html
   head
     title= title
     link(rel='stylesheet', href='/stylesheets/style.css')
+    
+    link(rel='stylesheet',href='stylesheets/fontawesome/font-awesome-4.7.0/css/font-awesome.min.css')
+    script(src="/js/jquery-3.6.0.min.js") 
+    script(src="/js/main.js") 
   body
     block content
+s
